--- a/blog/templates/main.html
+++ b/blog/templates/main.html
@@ -8,19 +8,14 @@
 	<br>
 	<br>
 	<br>
-	<div id="menu" style="background-color:#796066;height:20%;width:20%;float:left;">
-	<p>HTML<br>
-	CSS<br>
-	JavaScript</p></div>
-	<div id="menu" style="height:20%;width:70%;float:center;">
 	<h1 align="center">Hello :)</h2>
-	<p>
+	<p align = "center">
 		 My name is <a href="mailto:eimantas.stonys@gmail.com">Eimantas Stonys.</a><br>
 		 I work as a graphic / layout designer<br>for a Norwegian company
 		 <a href="http://www.Instant.no">Instant Norge AS.</a><br>
 		 I am also trying to learn <a href="http://www.Python.org">Python</a><br>
 		 and its framework <a href="http://www.DjangoProject.com">Django</a>.<br><br>
 		</p>
-	</div>
+	
 </body>
 </html>
