--- a/blog/templates/main.html
+++ b/blog/templates/main.html
@@ -1,21 +1,42 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html lang = "en">
-<head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!-- saved from url=(0028)http://127.0.0.1:8000/hello/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}styles.css">
 	<title>Blog</title>
 </head>
 <body>
-	<br>
-	<br>
-	<br>
-	<h1 align="center">Hello :)</h2>
-	<p align = "center">
-		 My name is <a href="mailto:eimantas.stonys@gmail.com">Eimantas Stonys.</a><br>
-		 I work as a graphic / layout designer<br>for a Norwegian company
-		 <a href="http://www.Instant.no">Instant Norge AS.</a><br>
-		 I am also trying to learn <a href="http://www.Python.org">Python</a><br>
-		 and its framework <a href="http://www.DjangoProject.com">Django</a>.<br><br>
+
+
+	<div id=navigation></div>
+
+	<div id=menu>	
+		<p>
+		<ul><a href="http://www.google.lt">ABOUT</a></ul>
+		<ul><a href="http://www.google.lt">BLOG</a></ul>
+		<ul><a href="http://www.google.lt">APPS</a></ul>
+		<ul><a href="http://www.google.lt">DESIGN</a></ul>
+		<ul><a href="http://www.google.lt">CONTACT</a></ul>
 		</p>
+	</div>
+
+
 	
+	<div id="header"></div>
+	
+	<div id=content>
+		<p>
+		 <span style="background-color: #F9EFF8; font-weight: bold; padding: 3px;">Hello there.</span><br><br>
+		 My name is <a href="mailto:eimantas.stonys@gmail.com">Eimantas Stonys.</a><br>
+		 I work as a graphic / layout designer<br>in a Norwegian company called
+		 <a href="http://www.instant.no/">Instant Norge AS.</a><br>
+		 I am also trying to learn <a href="http://www.python.org/">Python</a>
+		 and its framework <a href="http://www.djangoproject.com/">Django.</a><br>
+		 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		</p>
+	</div>
+
+	<!--<div id="footer"></div>-->
+	
+
 </body>
 </html>
