--- a/blog/static/styles.css
+++ b/blog/static/styles.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("/static/images/grey.png");
+	background-image: url("/static/images/white.png");
 }
 
 
@@ -7,8 +7,9 @@ body{
 p{
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 color:#a3a9aa;
-font-size: 40px;
+font-size: 20px;
 text-align: left;
+position: fixed;
 }
 
 
@@ -109,7 +110,7 @@ text-align: left;
 
 #content {
 	/* (white rectangle) */
-    position: absolute;
+    position: fixed;
     left: 25%;
     width: 60%;
     top: 10%;
@@ -123,7 +124,6 @@ text-align: left;
 	text-decoration: none;
 	font-weight: normal; padding-right: .1%; padding-left: .5%;
 	padding-top: .5%;
-	background-color: #697c96;
 
 }
 
@@ -132,7 +132,6 @@ text-align: left;
 
 a:link{
 color:#a3a9aa;
-background-size: 50% auto;
 text-decoration: none;
 
 }
