--- a/blog/templates/main.html
+++ b/blog/templates/main.html
@@ -1,42 +1,62 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<!-- saved from url=(0028)http://127.0.0.1:8000/hello/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}styles.css">
-	<title>Blog</title>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}style.css"/>
 </head>
+
 <body>
+ 	<div id="wrap">
+  		<div id="menu">
+  			<!--<div id="pic"><img src="http://www.gravatar.com/avatar/54635975d6b6cf0bb518a0f0d8092b93.png"></img><br><br></div>-->
+  			<div class="first"><a href="http://www.google.lt">ABOUT</a></div><br>
+  			<div class="second"><a href="http://www.google.lt">BLOG</a></div><br>
+  			<div class="third"><a href="http://www.google.lt">APPS</a></div><br>
+  			<div class="fourth"><a href="http://www.google.lt">DESIGN</a></div><br>
+  			<div class="fifth"><a href="http://www.google.lt">CONTACT</a></div>
+  		</div>
+	  		<div id="content">
+	  		<p>
+			<span style="font-weight: bold; font-size:29px; color: #464646;">Hello there.</span><br><br>
+			My name is <a href="mailto:eimantas.stonys@gmail.com">Eimantas Stonys.</a><br>
+			I work as a graphic / layout designer<br>
+			in a Norwegian company called<a href="http://www.instant.no/">
+			Instant Norge AS.</a><br>
+			I am also trying to learn <a href="http://www.python.org/">Python</a>
+			and its framework <a href="http://www.djangoproject.com/">Django.</a><br><br>
+			You can find some of my recent projects here.
+			You can also browse my graphic design gallery.
+			I do not write much, but you can read some of my blog entries
+			in this small Django-based website. Heh.
+			</p>
+			</div>
 
+			<div id="apps_recent">
+			<p>
+			My recent projects...
+			<br>
+			<br>
+			</p>
+			</div>
 
-	<div id=navigation></div>
+			<div id="design_recent">
+				<br>
+				<div id="design_recent_1"><p>Picture No. 1</p><br><br></div>
+				<div id="design_recent_2"><p>Picture No. 2</p><br><br></div>
+				<div id="design_recent_3"><p>Picture No. 3</p><br><br></div>
+				<br>.
+			</div>
 
-	<div id=menu>	
-		<p>
-		<ul><a href="http://www.google.lt">ABOUT</a></ul>
-		<ul><a href="http://www.google.lt">BLOG</a></ul>
-		<ul><a href="http://www.google.lt">APPS</a></ul>
-		<ul><a href="http://www.google.lt">DESIGN</a></ul>
-		<ul><a href="http://www.google.lt">CONTACT</a></ul>
-		</p>
-	</div>
+			<div id="blog_recent">
+			<p>
+			My recent blog entries...
+			<br>
+			<br>
+			</p>
+			</div>
 
-
-	
-	<div id="header"></div>
-	
-	<div id=content>
-		<p>
-		 <span style="background-color: #F9EFF8; font-weight: bold; padding: 3px;">Hello there.</span><br><br>
-		 My name is <a href="mailto:eimantas.stonys@gmail.com">Eimantas Stonys.</a><br>
-		 I work as a graphic / layout designer<br>in a Norwegian company called
-		 <a href="http://www.instant.no/">Instant Norge AS.</a><br>
-		 I am also trying to learn <a href="http://www.python.org/">Python</a>
-		 and its framework <a href="http://www.djangoproject.com/">Django.</a><br>
-		 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		</p>
-	</div>
-
-	<!--<div id="footer"></div>-->
-	
-
+  	</div>
 </body>
+
 </html>
