--- a/blog/templates/main.html
+++ b/blog/templates/main.html
@@ -9,7 +9,7 @@
 
 <body>
  	<div id="wrap">
- 		<div id="pic"><a href="/"><img src="{{ STATIC_URL }}images/as.png"></img></a><br></div>
+ 		<div id="pic"><a href="/"><img src="{{ STATIC_URL }}images/ash.png"></img></a><br></div>
   		 {% block Nav %}
   		<div id="menu">
   			<div class="first"><a href="/about">About</a></div><br>
