--- a/blog/templates/main.html
+++ b/blog/templates/main.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<!--<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script>
 
 	var offset = 10%; // left offset of the fixed div (without scrolling)
@@ -15,7 +15,7 @@ $(document).scroll(function(e) {
     });
 });
 
-	</script>
+	</script>-->
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}style.css"/>
 	<link href="{{ STATIC_URL }}monokai.css" media="screen" rel="stylesheet" type="text/css" />
 
