--- a/blog/templates/contact.html
+++ b/blog/templates/contact.html
@@ -30,7 +30,7 @@
             {{ form.message.errors.as_text }}
         
         {% csrf_token %}
-        <br><input type="submit" value="Send!">
+        <br><input type="submit" value="Say Hello">
     </div>
     </form>
     <br>
