--- a/blog/templates/main.html
+++ b/blog/templates/main.html
@@ -16,6 +16,7 @@ $(document).scroll(function(e) {
 });
 
 	</script>-->
+	<title>Hello</title>
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}style.css"/>
 	<link href="{{ STATIC_URL }}monokai.css" media="screen" rel="stylesheet" type="text/css" />
 
